fix radiobutton overflow

--- a/style.css
+++ b/style.css
@@ -62,6 +62,17 @@ select {
   background-position: right 5px center; /* Position the arrow on the right with a little padding */
   background-size: 10px;
 }
+.rsvp-attendance {
+  display: flex;
+}
+.radio-container {
+  display: inline-flex;
+  gap: 15px;
+  min-width: 200px;
+  margin-top: 0.5px;
+  align-items: center;
+  margin-left: 20px;
+}
 button {
   background-color: black;
   color: white;
@@ -266,4 +277,5 @@ img {
 .activity-body {
   font-size: 0.9em;
   margin: 10px 0px;
+  margin-right: 15px;
 }
